--- a/advisory-commitee.html
+++ b/advisory-commitee.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/about-us.css">
+  <link rel="stylesheet" href="./css/pages/advisory-commitee.css">
 </head>
 
 <body>
@@ -88,11 +88,10 @@
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
               <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
-              <a class="dropdown-item" href="#">Vision</a>
-              <a class="dropdown-item" href="#">Objectives</a>
+              <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="#">ISM Committee</a>
-              <a class="dropdown-item" href="#">Advisory Committee</a>
+              <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
               <a class="dropdown-item" href="#">Useful Links</a>
             </div>
           </li>
@@ -148,9 +147,12 @@
       </div>
       <div class="social-part">
         <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png" alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+            alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+            src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+            alt=""></a>
       </div>
     </nav>
   </header>
@@ -167,19 +169,307 @@
 
   <section class="about_section p-5">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class=""><img src="./images/about-ism.webp" alt=""></div>
+      <div>
+        <!-- <p class="sub-heading">Job Posts</p> -->
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Minister of Electronics and Information Technology</div>
+                  <div class="ism-cards_content_description"><span>&nbsp;Chairman</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Minister of State, Ministry of Electronics and Information
+                    Technology</div>
+
+                  <div class="ism-cards_content_description"><span>Vice Chairman</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Principal Scientific Adviser to the Government of India</div>
+
+                  <div class="ism-cards_content_description"><span>PSA</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Ministry of Electronics &amp; Information Technology (Convenor)
+                  </div>
+
+                  <div class="ism-cards_content_description"><span>Secretary</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Ministry of External Affairs</div>
+
+                  <div class="ism-cards_content_description"><span>Secretary</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Department of Expenditure</div>
+
+                  <div class="ism-cards_content_description"><span>Secretary</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Department of Economic Affairs</div>
+
+                  <div class="ism-cards_content_description"><span>Secretary</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Dr. V. K. Saraswat</div>
+
+                  <div class="ism-cards_content_description"><span>Member NITI Aayog</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Department for Promotion of Industry and Internal Trade (DPIIT)
+                  </div>
+
+                  <div class="ism-cards_content_description"><span>Secretary</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Dy. NSA, National Security Council Secretariat</div>
+
+                  <div class="ism-cards_content_description"><span></span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Department of Higher Education, Ministry of Education</div>
+
+                  <div class="ism-cards_content_description"><span>Secretary</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">col</div> -->
         </div>
-        <div class="col-sm-6 p-5">
-          <div class="">
-            <p>India Semiconductor Mission (ISM) is a specialized and independent Business Division within the Digital
-              India Corporation that aims to build a vibrant semiconductor and display ecosystem to enable India’s
-              emergence as a global hub for electronics manufacturing and design. Led by global experts of the
-              Semiconductor and display ecosystem the mission aims to serve as a focal point for the comprehensive,
-              coherent, efficient, and smooth deployment of the Program for Development of Semiconductor and Display
-              Ecosystem in consultation with the Government ministries / departments / agencies, industry, and academia.
-            </p>
+      </div>
+
+      <div>
+        <p class="sub-heading my-4">Representatives from the Industry</p>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Vinod Dham </div>
+                  <div class="ism-cards_content_description"><span>Founder & Ex. Managing Partner at Indo-US venture
+                      Partners</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Ajit Manocha</div>
+
+                  <div class="ism-cards_content_description"><span>President SEMI</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Ajai Chowdhry</div>
+
+                  <div class="ism-cards_content_description"><span>Co-Founder HCL</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Neelkanth Mishra</div>
+
+                  <div class="ism-cards_content_description"><span>Chief Economist, Axis Bank</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Cyril Patrick Fernandez</div>
+
+                  <div class="ism-cards_content_description"><span>CTO & MD, Advanced Fab Technology</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Rajesh Nair</div>
+
+                  <div class="ism-cards_content_description"><span>Vice President -Technology & CMOS Business Unit,
+                      GlobalFoundries</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Prabu Raja</div>
+
+                  <div class="ism-cards_content_description"><span>Senior Vice President, Applied Materials</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Vivek Jain</div>
+
+                  <div class="ism-cards_content_description"><span>Executive Vice President, Analog Devices </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Sriram Vishvanathan</div>
+
+                  <div class="ism-cards_content_description"><span>Founding Managing Partner, Celesta Capital</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Shri Mukesh Khare</div>
+
+                  <div class="ism-cards_content_description"><span>General Manager, IBM </span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <p class="sub-heading my-4">Representatives from the Academia</p>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Prof. V. Kamakoti, Director </div>
+                  <div class="ism-cards_content_description"><span>IIT Madras
+                    </span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Prof. A Paulraj
+                  </div>
+
+                  <div class="ism-cards_content_description"><span>Emeritus Professor at Stanford University
+                    </span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Prof. Pradeep Khosla
+                  </div>
+
+                  <div class="ism-cards_content_description"><span>Chancellor, University of California San Diego
+                    </span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Prof. Rao Tummala
+                  </div>
+
+                  <div class="ism-cards_content_description"><span>Director Emeritus, Georgia Tech
+                    </span></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -212,10 +502,14 @@
           <h5 class="mb-5">Social Media</h5>
           <ul>
             <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
+                  alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
+                  alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                  alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
