--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              About ISM
+              <span class="header-active">About ISM</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="/our-ministers.html">Our Ministers</a>
