our ministers doe

--- a/advisory-commitee.html
+++ b/advisory-commitee.html
@@ -296,6 +296,28 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Department of Revenue</div>
+
+                  <div class="ism-cards_content_description"><span>Secretary</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <div class="ism-cards v4">
+              <div class="ism-cards_box">
+                <div class="ism-cards_content">
+                  <div class="ism-cards_content_title">Department of Science and Technology</div>
+
+                  <div class="ism-cards_content_description"><span>Secretary</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">col</div> -->
         </div>
       </div>
@@ -347,7 +369,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+          <!-- <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
             <div class="ism-cards v4">
               <div class="ism-cards_box">
                 <div class="ism-cards_content">
@@ -357,7 +379,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
             <div class="ism-cards v4">
               <div class="ism-cards_box">
@@ -409,9 +431,9 @@
             <div class="ism-cards v4">
               <div class="ism-cards_box">
                 <div class="ism-cards_content">
-                  <div class="ism-cards_content_title">Shri Mukesh Khare</div>
+                  <div class="ism-cards_content_title">Shri Sri Samavedam</div>
 
-                  <div class="ism-cards_content_description"><span>General Manager, IBM </span></div>
+                  <div class="ism-cards_content_description"><span>SVP, IMEC, Belgium</span></div>
                 </div>
               </div>
             </div>
