--- a/faqs.html
+++ b/faqs.html
@@ -71,7 +71,7 @@
   </div>
 </div>
 <header class="header">
-  <nav class="nav container">
+  <nav class="nav nav__header container">
      <!--=============== NAV MENU ===============-->
      <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
