--- a/advisory-commitee.html
+++ b/advisory-commitee.html
@@ -77,8 +77,8 @@
         <ul class="nav__list">
            <li><a href="/index.html" class="nav__link">Home</a></li>
            <li class="dropdown__item">
-            <div class="nav__link">
-              About ISM <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+            <div class="nav__link"><span class="header_active__link">
+              About ISM <i class="ri-arrow-down-s-line dropdown__arrow"></i></span>
             </div>           
             <ul class="dropdown__menu">
                <li><a class="dropdown__link" href="/our-ministers.html">Our Ministers</a></li> 
