--- a/advisory-commitee.html
+++ b/advisory-commitee.html
@@ -171,7 +171,7 @@
     </div>
   </section>
 
-  <section class="about_section py-5">
+  <section class="advisory-section py-5">
     <div class="container">
       <div>
         <div class="row">
